BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/ConfigUffPrivateDR__c.object-meta.xml
<CustomObject>
    <label>Config Uff. Private / DR</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Config Uff. Private / DR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Uff. Private / DR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>