BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/IdCed__c.field-meta.xml
<CustomField>
    <fullName>IdCed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>