BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/IdCedPadre__c.field-meta.xml
<CustomField>
    <fullName>IdCedPadre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdCed Padre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>