BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/PTF_DR__c.field-meta.xml
<CustomField>
    <fullName>PTF_DR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direzione Regionale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Config Uff. Private / DR (Direzione Regionale)</relationshipLabel>
    <relationshipName>Config_Uff_Private_DR1</relationshipName>
    <type>Lookup</type>
</CustomField>