BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/PTF_IdCEDDR__c.field-meta.xml
<CustomField>
    <fullName>PTF_IdCEDDR__c</fullName>
    <formula>PTF_DR__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdCED DR</label>
    <type>Text</type>
</CustomField>