BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/PTF_IdCEDUffPrivate__c.field-meta.xml
<CustomField>
    <fullName>PTF_IdCEDUffPrivate__c</fullName>
    <formula>PTF_UffPrivate__r.PTF_IdCED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdCED Ufficio Private</label>
    <type>Text</type>
</CustomField>