BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/PTF_IdCP__c.field-meta.xml
<CustomField>
    <fullName>PTF_IdCP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Centro Private</label>
    <length>255</length>
    <type>Text</type>
</CustomField>