BPER/DEVF/force-app/main/default/objects/ConfigUffPrivateDR__c/fields/PTF_UffPrivate__c.field-meta.xml
<CustomField>
    <fullName>PTF_UffPrivate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ufficio Private</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Config Uff. Private / DR</relationshipLabel>
    <relationshipName>Config_Uff_Private_DR</relationshipName>
    <type>Lookup</type>
</CustomField>